# satd-git-extractor

./: pyproject.toml  readme.md  requirements.txt
resources/: repositories.csv
src/satd_git_extractor/: __main__.py
src/satd_git_extractor/api/: __init__.py  extractor.py  merger.py
src/satd_git_extractor/data/: __init__.py  commit_info.py  repository_info.py
src/satd_git_extractor/tools/: __init__.py  _consume_commit.py  _get_commit_hashes.py  _get_repositories.py  _get_repository.py  _into_commit_info.py  _next_available_filepath.py  _print_progress.py
