[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satd_git_extractor"
version = "0.0.1"
authors = [
  { name="BambusControl", email="mojmir.majer@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
camel-xml2java = "satd_git_extractor.__main__:main"
